--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215827874-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RPVJD80KK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-215827874-1');
+      gtag('config', 'G-9RPVJD80KK');
     </script>
 
     <meta charset="utf-8">
