--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,21 @@
 <html lang="">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RPVJD80KK"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RPVJD80KK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-9RPVJD80KK');
-    </script> -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      gtag('config', 'GTM-N4DJ7L3');
+    </script>
+    <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       console.log('https://www.googletagmanager.com/gtm.js?id='+i+dl)
       })(window,document,'script','dataLayer','GTM-N4DJ7L3');
-    </script>
+    </script> -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
